added correct footer and logo

--- a/index.html
+++ b/index.html
@@ -94,16 +94,7 @@
     </div>
   </body>
   <footer style="text-align: center; padding: 20px">
-    <p>&copy; Laundr Inc, 2023. All rights reserved.</p>
-    <p>
-      <a href="https://www.yourwebsite.com">Your Website</a> |
-      <a href="mailto:contact@yourwebsite.com">Contact Us</a>
-    </p>
-    <p>Follow us on:</p>
-    <p>
-      <a href="https://www.facebook.com/yourpage" target="_blank">Facebook</a> |
-      <a href="https://www.twitter.com/yourpage" target="_blank">Twitter</a> |
-      <a href="https://www.instagram.com/yourpage" target="_blank">Instagram</a>
-    </p>
+    <img src="../sprites/LogoBlue.png" alt="Laundr Logo" style="width:160px; vertical-align: middle" href="https://laundr.io"/>
+    <p>&copy; Laundr Inc, 2025. All rights reserved.</p>
   </footer>
 </html>
