--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
       </div>
     </div>
   </body>
-  <footer style="text-align: center; padding: 20px">
+  <footer style="text-align: center; padding: 20px; position: fixed; bottom: 0; left: 0; width: 100%;">
     <img src="../sprites/LogoBlue.png" alt="Laundr Logo" style="width:160px; vertical-align: middle" href="https://laundr.io"/>
-    <p>&copy; Laundr Inc, 2025. All rights reserved.</p>
+    <p>&copy; Laundr Inc. 2025. All rights reserved.</p>
   </footer>
 </html>
