--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>404 - Game found!</title>
+    <title>Laundr Presents: Hamperman</title>
+    <link rel="icon" href="sprites/LogoSquare.jpg" type="image/png" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.3.3/pixi.min.js"></script>
     <!-- <script src='js/pixi.min.js'></script> -->
     <!-- Provided in case cdnjs stops hosting our file -->
