Added google tag

--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
       target="_blank"
       href="../styles/indexStyles.css"
     />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZS58R7E0R3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-ZS58R7E0R3');
+    </script>
   </head>
   <body>
     <div>
