--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           ,
           style="width: 100%"
         ></canvas>
-        <div id="leaderboard-container" style="position: absolute; top: 10%; left: 75%; transform: translate(-50%, 0); background-color: white; padding: 20px; border-radius: 10px; display: none; z-index: 10; width: 300px; border: 2px solid black;"></div>
+        <div id="leaderboard-container" style="position: absolute; top: 10%; left: 75%; transform: translate(-50%, 0); background-image: url('../sprites/popupbackground.png'); background-size: 100% 100%; padding: 40px; border-radius: 10px; display: none; z-index: 10; width: 300px; color: #4e4e4e; text-align: center;"></div>
         <!-- html version of social sharing options -->
         <div class="socials" id="socials" style="width: 25%; min-width: 70px">
           <div
